Initial fixes from adding linters

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,3 +11,9 @@ AllCops:
     - 'db/schema.rb'
     - 'node_modules/**/*'
     - '.git/**/*'
+
+Style/Documentation:
+  Exclude:
+    - 'app/**/*'
+    - 'config/**/*'
+    - 'db/**/*'
